--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -36,9 +36,14 @@
                     <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                     <br/>
                 </t>
-                <t t-if="o.state not in ['draft','sent']">
+                <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']">
                     <strong>Order Arrive By Date:</strong>
                     <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
+                    <br/>
+                </t>
+                <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
+                    <strong>RFQ Date:</strong>
+                    <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                     <br/>
                 </t>
 
@@ -78,7 +83,7 @@
         <xpath expr="//h2[last()]" position="replace">
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="attributes">
-            <attribute name="style">margin-bottom: 5px;</attribute>
+            <attribute name="style">margin-bottom: 0px;</attribute>
         </xpath>
         <!--        <xpath expr="//div[@id='total']/div//table[hasclass('table', 'table-sm')]" position="attributes">-->
         <!--             <attribute name="style">width: 150%;</attribute>-->
@@ -122,35 +127,35 @@
                     <!--                    <th name="th_sn" class="text-center">-->
                     <!--                        <strong>ISBN</strong>-->
                     <!--                    </th>-->
-                    <th name="th_default_code" class="text-left">
+                    <th name="th_default_code" class="text-center">
                         <strong>ISBN</strong>
                     </th>
-                    <th name="th_description" class="text-left">
+                    <th name="th_description" class="text-center">
                         <strong>Description</strong>
                     </th>
-                    <th name="th_format" class="text-right">
+                    <th name="th_format" class="text-center">
                         <strong>Format</strong>
                     </th>
                     <!-- <th name="th_taxes" class="text-center"><strong>Taxes</strong></th> -->
-                    <th name="th_quantity" class="text-right">
+                    <th name="th_quantity" class="text-center">
                         <strong>Qty</strong>
                     </th>
                     <!--                    <th name="th_uom" class="text-center">-->
                     <!--                        <strong>Uom</strong>-->
                     <!--                    </th>-->
-                    <th name="th_cover" class="text-right">
+                    <th name="th_cover" class="text-center">
                         <strong>Cover</strong>
                     </th>
                     <!--                    <th name="th_price_unit" class="text-center">-->
                     <!--                        <strong>Unit Price</strong>-->
                     <!--                    </th>-->
-                    <th name="th_discount" class="text-right">
+                    <th name="th_discount" class="text-center">
                         <strong>Discount</strong>
                     </th>
-                    <th name="th_bp_price" class="text-right text-danger">
+                    <th name="th_bp_price" class="text-center text-danger" width="93px;">
                         <strong>BP Price</strong>
                     </th>
-                    <th name="th_amount" class="text-right">
+                    <th name="th_amount" class="text-center">
                         <strong>Total</strong>
                     </th>
                 </tr>
@@ -175,7 +180,7 @@
                 <!-- <td name="td_taxes" class="text-center">
                     <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
                 </td> -->
-                <td class="text-center" name="td_format" style="border-bottom: 1px solid black;">
+                <td class="text-center" name="td_format" style="border-bottom: 1px solid black; ">
                     <t t-set="format" t-value="MMP"/>
                     <span>MMP</span>
                 </td>
@@ -203,7 +208,7 @@
                 <!--                <td class="text-center">-->
                 <!--                    <span t-field="line.price_unit"/>-->
                 <!--                </td>-->
-                <td class="text-right" style="border-bottom: 1px solid black; margin: auto; width: 150px;">
+                <td class="text-right" style="border-bottom: 1px solid black; margin: auto; width: 100px;">
                     <span t-field="line.price_subtotal"
                           t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                 </td>
@@ -263,7 +268,7 @@
     </template>
     <template id="document_tax_totals_extended" inherit_id="account.document_tax_totals">
         <xpath expr="//td[1]" position="replace">
-            <td style="border-right: 1px solid black;  margin: auto; width: 150px;">
+            <td style="border-right: 1px solid black;  margin: auto; width: 100px;">
                 <strong>Subtotal</strong>
             </td>
         </xpath>
@@ -272,9 +277,9 @@
 
             <tr class="border-black o_subtotal">
                 <td>
-                    <strong>Without Disc Total</strong>
+                    <strong>Total W/D</strong>
                 </td>
-                <td class="text-right" style="border-left: 1px solid black; margin: auto; width: 150px; ">
+                <td class="text-right" style="border-left: 1px solid black; margin: auto; width :38.9%;">
                     <span t-field="o.without_disc_amount_untaxed"/>
                 </td>
             </tr>
@@ -292,8 +297,9 @@
                         <strong>Subtotal</strong>
                     </td>
                     <td class="text-right" style="border-left: 1px solid black;">
-                        $
-                        <span t-esc="0.0"/>
+                        <!--                        <t t-set="subtotal"  t-value=""/>-->
+                        <span t-esc="o.without_disc_amount_untaxed + o.total_discount_amount"
+                              t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                         <!--                        <span t-esc="tax_totals"/>-->
                     </td>
                 </tr>
@@ -302,8 +308,7 @@
                         <strong>Tax</strong>
                     </td>
                     <td class="text-right" style="border-left: 1px solid black;">
-                        $
-                        <span t-esc="0.0"/>
+                        <span t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                         <!--                        <span t-esc="tax_totals"/>-->
                     </td>
                 </tr>
@@ -316,9 +321,7 @@
                 </td>
                 <td class="text-right" style="border-left: 1px solid black;">
                     <div>
-                        $
-                        <span t-esc="0.0"/>
-
+                        <span t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </div>
                 </td>
             </tr>
@@ -331,7 +334,7 @@
             <attribute name="style">border-left: 1px solid black; margin-right: 2px;</attribute>
         </xpath>
         <xpath expr="//t[@t-else='']//td[1]/span" position="replace">
-<!--            <attribute name="class"> font-weight-bold</attribute>-->
+            <!--            <attribute name="class"> font-weight-bold</attribute>-->
             <strong class="text-nowrap" t-esc="amount_by_group['tax_group_name']"/>
         </xpath>
     </template>
