[IMP] in Purchase Order Report Added Subtotal Value If tax is 0.

--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -57,7 +57,7 @@
                 </t>
 
                 <strong>Shipping Method :</strong>
-                <span>Free Delivary Method</span>
+                <span>Free Delivery Method</span>
                 <br/>
                 <t t-if="o.shipping_instructions">
                     <strong>Shipping Instructions :</strong>
