--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -191,7 +191,7 @@
         <!-- Hidden Quotation & Order # from base report  -->
         <xpath expr="//div[hasclass('page')]/h2" position="replace">
         </xpath>
-        <!-- Added info table beside total summery table  -->
+        <!-- added total saving  beside total summery table  -->
         <xpath expr="//div[@name='so_total_summary']" position="replace">
             <div class="clearfix row" name="so_total_summary">
                     <div class="col-6">
