--- a/bista_sale_multi_ship/report/shipment_report_view.xml
+++ b/bista_sale_multi_ship/report/shipment_report_view.xml
@@ -1,84 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <template id="shipment_custom_header">
-        <t t-set="company" t-value="user.company_id"/>
-        <div class="header">
-            <div class="o_boxed_header">
-                <div class="row mb8">
-                    <div class="col-6">
-                        <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
-                        <div name="company_address" class="mb4" style="font-size: 15px;  margin-top: 15px; padding-bottom: 5px;">
-                            <span t-field="company.partner_id" t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'></span>
-                        </div>
-                    </div>
-                    <div name="report_info" class="col-6 text-right mb4">
-                        <h3 t-esc="env['ir.actions.report'].search([('report_name', '=', xmlid)]).name"/>
-                        <h3><t t-esc="doc.name"/></h3>
-                        
-                        <t>
-                            <h5 style="font-size: 20px;">Order Date: <t t-esc="doc.date_order" t-options='{"widget": "date"}'/></h5>
-                        </t>
-                        <div class="row offset-md-4 col-6" style="padding-bottom: 20px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div t-if="company.logo or company.report_header" class="row zero_min_height">
-            </div>
-        </div>
-        <div class="article o_report_layout_standard" t-att-data-oe-model="doc and doc._name"
-             t-att-data-oe-id="doc and doc.id">
-            <div class="pt-5">
-                <!-- This div ensures that the address is not cropped by the header. -->
-                <t t-call="web.address_layout"/>
-            </div>
-            <t t-out="0"/>
-        </div>
-
-        <div class="footer">
-            <div class="text-center" style="border-top: 3px solid black;font-size:14px;">
-                <div t-field="company.report_footer"/>
-                <div t-if="report_type == 'pdf'" class="row text-center" style="font-size: 14px;font-color:grey">
-                    <div class="text-center" t-if="company.email" style="width:30%">
-                        <span t-field="company.email"/>
-                    </div>
-                    <div class="text-center" t-if="company.phone" style="width:30%">
-                        <span t-field="company.phone"/>
-                    </div>
-                    <div class="text-center" t-if="company.website" style="width:30%">
-                        <span t-field="company.website"/>
-                    </div>
-                </div>
-                <br/>
-                <div t-if="report_type == 'pdf'" class="text-center" style="font-size:14px;">
-                    Page: <span class="page"/> / <span class="topage"/>
-                </div>
-            </div>
-        </div>
-    </template>
-
     <template id="report_shipment_document">
-        <t t-call="bista_sale_multi_ship.shipment_custom_header">
+        <t t-call="bista_report_header_footer.shipment_custom_header">
             <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
+            <t t-set="o" t-value="doc.with_context(lang=doc.partner_id.lang)" />
             <div class="page">
-                <div class="oe_structure"/>
-                <h2>
-                    <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
-                        <span t-if="doc.state not in ['draft','sent']">Order # </span>
-                        <span t-if="doc.state in ['draft','sent']">Quotation # </span>
-                    </t>
-                    <span t-field="doc.name"/>
-                </h2>
-                <div id="informations">
-                    <div class="col-4">
-                        <span>
-                            <strong>Bill To:</strong>
-                        </span>
-                        <div t-field="doc.partner_invoice_id"
-                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
-                    </div>
+                <div t-set="address">
+                    <span>
+                        <strong>Customer Detail:</strong>
+                    </span>
+                    <div t-field="doc.partner_id"
+                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
+                <t t-set="report_info"
+                     class="col-6 text-right mb4">
+                    <h3 t-if="o.state != 'draft'">Sale Order</h3>
+                    <h3 t-if="o.state == 'draft'">Quotation</h3>
+                    <h4>
+                        <strong>
+                            <t t-esc="o.name"/>
+                        </strong>
+                    </h4>
+                    <strong>Order Date:
+                        <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                    </strong>
+                    <br/>
+                </t>
+                <t t-set="information_block" >
+                    <t t-if="doc.state not in ['draft', 'sent']">
+                        <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing Address:</strong>
+                        <div t-field="doc.partner_invoice_id"
+                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                    </t>
+                </t>
+                <t t-set="custom_information_block">
+                    <div>
+                        <t t-if="doc.state in ['draft','sent']">
+                            <strong>Quotation:</strong>
+                            <t t-esc="doc.name"/>
+                            <br/>
+                        </t>
+                        <t t-if="doc.state not in ['draft','sent']">
+                            <strong>Sale Order:</strong>
+                            <t t-esc="doc.name"/>
+                            <br/>
+                        </t>
+                        <t t-if="doc.state in ['draft','sent']">
+                            <strong>Quotation Date:</strong>
+                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                            <br/>
+                        </t>
+                        <t t-if="doc.state not in ['draft','sent']">
+                            <strong>Order Date:</strong>
+                            <span t-esc="datetime.datetime.now()" t-options='{"widget": "date"}'>
+                            </span>
+                            <br/>
+                        </t>
+                        <strong>Customer Ref:</strong>
+                        <t t-esc="doc.client_order_ref"/>
+                        <br/>
+                        <strong>Valid Until:</strong>
+                         <t t-if="doc.state in ['draft','sent']">
+                          <t t-esc="doc.valid_until"/>
+                         </t>
+                        <br/>
+                        <strong>Salesperson:</strong>
+                        <t t-esc="o.user_id.name"/>
+                        <br/>
+                    </div>
+                </t>
+
                 <table class="table table-sm o_main_table">
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                     <thead style="display: table-row-group">
@@ -89,13 +81,8 @@
                             <th name="th_quantity" class="text-right">Quantity</th>
                             <th class="text-right">UOM</th>
                             <th name="th_priceunit" class="text-right">Unit Price</th>
-                            <th name="th_discount" t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
-                                <span>Disc.%</span>
-                            </th>
-                            <th name="th_taxes" class="text-right">Taxes</th>
                             <th name="th_subtotal" class="text-right">
-                                <span groups="account.group_show_line_subtotals_tax_excluded">Amount</span>
-                                <span groups="account.group_show_line_subtotals_tax_included">Total Price</span>
+                                <span>Amount</span>
                             </th>
                         </tr>
                     </thead>
@@ -103,7 +90,6 @@
                         <t t-set="current_subtotal" t-value="0"/>
                         <t t-foreach="doc.sale_multi_ship_qty_lines" t-as="line">
                             <t t-set="current_subtotal" t-value="current_subtotal + (line.product_qty* line.so_line_id.price_unit)" groups="account.group_show_line_subtotals_tax_excluded"/>
-                            <!-- <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/> -->
 
                             <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.so_line_id.display_type == 'line_section' else 'font-italic o_line_note' if line.so_line_id.display_type == 'line_note' else ''">
                                 <t t-if="not line.so_line_id.display_type">
@@ -119,15 +105,8 @@
                                     <td name="td_priceunit" class="text-right">
                                         <span t-field="line.so_line_id.price_unit"/>
                                     </td>
-                                    <td t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
-                                        <span t-field="line.so_line_id.discount"/>
-                                    </td>
-                                    <td name="td_taxes" class="text-right">
-                                        <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.so_line_id.tax_id))"/>
-                                    </td>
                                     <td name="td_subtotal" class="text-right o_price_total">
-                                        <span t-esc="line.product_qty * line.so_line_id.price_unit" groups="account.group_show_line_subtotals_tax_excluded"/>
-                                        <!-- <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/> -->
+                                        <span t-esc="line.product_qty * line.so_line_id.price_unit"/>
                                     </td>
                                 </t>
                                 <t t-if="line.so_line_id.display_type == 'line_section'">
@@ -143,8 +122,7 @@
                                     </td>
                                 </t>
                             </tr>
-
-                            <!-- <t t-if="current_section and (line_last or doc.order_line[line_index+1].display_type == 'line_section')">
+                            <t t-if="current_section and (doc.order_line[line_index+1].display_type == 'line_section')">
                                 <tr class="is-subtotal text-right">
                                     <td name="td_section_subtotal" colspan="99">
                                         <strong class="mr16">Subtotal</strong>
@@ -154,7 +132,7 @@
                                         />
                                     </td>
                                 </tr>
-                            </t> -->
+                            </t>
                         </t>
                     </tbody>
                 </table>
