[IMP] Added Subtotal value In shipment_report_view report

--- a/bista_sale_multi_ship/report/shipment_report_view.xml
+++ b/bista_sale_multi_ship/report/shipment_report_view.xml
@@ -3,8 +3,8 @@
 
     <template id="report_shipment_document">
         <t t-call="bista_report_header_footer.shipment_custom_header">
-            <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
-            <t t-set="o" t-value="doc.with_context(lang=doc.partner_id.lang)" />
+            <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
+            <t t-set="o" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
             <div class="page">
                 <div t-set="address">
                     <span>
@@ -14,7 +14,7 @@
                          t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
                 <t t-set="report_info"
-                     class="col-6 text-right mb4">
+                   class="col-6 text-right mb4">
                     <h3 t-if="o.state != 'draft'">Sale Order</h3>
                     <h3 t-if="o.state == 'draft'">Quotation</h3>
                     <h4>
@@ -27,11 +27,11 @@
                     </strong>
                     <br/>
                 </t>
-                <t t-set="information_block" >
+                <t t-set="information_block">
                     <t t-if="doc.state not in ['draft', 'sent']">
                         <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing Address:</strong>
                         <div t-field="doc.partner_invoice_id"
-                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                     </t>
                 </t>
                 <t t-set="custom_information_block">
@@ -61,9 +61,9 @@
                         <t t-esc="doc.client_order_ref"/>
                         <br/>
                         <strong>Valid Until:</strong>
-                         <t t-if="doc.state in ['draft','sent']">
-                          <t t-esc="doc.valid_until"/>
-                         </t>
+                        <t t-if="doc.state in ['draft','sent']">
+                            <t t-esc="doc.valid_until"/>
+                        </t>
                         <br/>
                         <strong>Salesperson:</strong>
                         <t t-esc="o.user_id.name"/>
@@ -75,8 +75,8 @@
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                     <thead style="display: table-row-group">
                         <tr>
-                            <th> Need By Date </th>
-                            <th> Shipment Address </th>
+                            <th>Need By Date</th>
+                            <th>Shipment Address</th>
                             <th name="th_description" class="text-left">Description</th>
                             <th name="th_quantity" class="text-right">Quantity</th>
                             <th class="text-right">UOM</th>
@@ -87,15 +87,23 @@
                         </tr>
                     </thead>
                     <tbody class="sale_tbody">
-                        <t t-set="current_subtotal" t-value="0"/>
+<!--                        <t t-set="current_subtotal" t-value="0"/>-->
                         <t t-foreach="doc.sale_multi_ship_qty_lines" t-as="line">
-                            <t t-set="current_subtotal" t-value="current_subtotal + (line.product_qty* line.so_line_id.price_unit)" groups="account.group_show_line_subtotals_tax_excluded"/>
+<!--                            <t t-set="current_subtotal"-->
+<!--                               t-value="current_subtotal + (line.product_qty* line.so_line_id.price_unit)"-->
+<!--                               />-->
 
                             <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.so_line_id.display_type == 'line_section' else 'font-italic o_line_note' if line.so_line_id.display_type == 'line_note' else ''">
                                 <t t-if="not line.so_line_id.display_type">
-                                    <td><span t-field="line.shipping_date"/></td>
-                                    <td><span t-field="line.partner_id"/></td>
-                                    <td name="td_name"><span t-field="line.product_id"/></td>
+                                    <td>
+                                        <span t-field="line.shipping_date"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="line.partner_id"/>
+                                    </td>
+                                    <td name="td_name">
+                                        <span t-field="line.product_id"/>
+                                    </td>
                                     <td name="td_quantity" class="text-right">
                                         <span t-field="line.product_qty"/>
                                     </td>
@@ -114,7 +122,7 @@
                                         <span t-field="line.so_line_id.name"/>
                                     </td>
                                     <t t-set="current_section" t-value="line"/>
-                                    <t t-set="current_subtotal" t-value="0"/>
+<!--                                    <t t-set="current_subtotal" t-value="0"/>-->
                                 </t>
                                 <t t-if="line.so_line_id.display_type == 'line_note'">
                                     <td name="td_note_line" colspan="99">
@@ -122,20 +130,27 @@
                                     </td>
                                 </t>
                             </tr>
-                            <t t-if="current_section and (doc.order_line[line_index+1].display_type == 'line_section')">
-                                <tr class="is-subtotal text-right">
-                                    <td name="td_section_subtotal" colspan="99">
-                                        <strong class="mr16">Subtotal</strong>
-                                        <span
-                                            t-esc="current_subtotal"
-                                            t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'
-                                        />
-                                    </td>
-                                </tr>
-                            </t>
                         </t>
                     </tbody>
                 </table>
+                <div class="text-right">
+                    <t t-set="current_sub" t-value="0"/>
+                    <t t-foreach="doc.sale_multi_ship_qty_lines" t-as="line">
+                        <t t-set="current_sub"
+                       t-value= "current_sub + (line.product_qty* line.so_line_id.price_unit)"/>
+                    </t>
+                    <t>
+                        <tr class="is-subtotal text-right">
+                            <td name="td_section_subtotal" colspan="99">
+                                <strong class="mr16">Subtotal </strong>
+                                <span
+                                        t-esc="current_sub"
+                                        t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'
+                                />
+                            </td>
+                        </tr>
+                    </t>
+                </div>
             </div>
         </t>
     </template>
