--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -25,9 +25,11 @@
                 </group>
             </xpath>
 
-<!--            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">-->
-<!--                <field name="tracking_ref"/>-->
-<!--            </xpath>-->
+            <xpath expr="//sheet" position="before">
+                <div class="alert alert-danger mb-0" role="alert">
+                    <span>Before Doing Any Opertions, Please Check The Nuances.</span>
+                </div>
+            </xpath>
             <xpath expr="//page[@name='purchase_delivery_invoice']" position="after">
                 <page name="po_details" string="PO Details">
                     <field name="sale_order_ids" nolabel="1" readonly="1">
