--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -15,8 +15,10 @@
              <xpath expr="//field[@name='payment_term_id']" position="after">
                 <field name="client_order_ref"/>
             </xpath>
-<!--             <xpath expr="//page[@name='other_information']/field[@name='client_order_ref']" position="replace">-->
-<!--            </xpath>-->
+            <xpath expr="//field[@name='partner_id']" position="after">
+                <field name="due_amount"/>
+            </xpath>
+
 
             <xpath expr="//group/group[@name='sales_person']/field[@name='client_order_ref']" position="replace">
             </xpath>
