--- a/bista_bigcommerce_extend/views/product_template.xml
+++ b/bista_bigcommerce_extend/views/product_template.xml
@@ -16,8 +16,43 @@
                 <xpath expr="//field[@name='uom_po_id']" position="after">
                     <field name="publisher_id"/>
                     <field name="author_id"/>
+                    <field name="isbn"/>
                 </xpath>
             </field>
         </record>
+
+        <record id="product_template_tree_view_extend_isbn" model="ir.ui.view">
+            <field name="name">product.template.tree.view.extend.isbn</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_tree_view" />
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='default_code']" position="after">
+                    <field name="isbn" optional="hide"/>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="product_form_view_extend_isbn" model="ir.ui.view">
+            <field name="name">product.form.view.extend.isbn</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_normal_form_view" />
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='default_code']" position="after">
+                    <field name="isbn"/>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="product_tree_view_extend_isbn" model="ir.ui.view">
+            <field name="name">product.tree.view.extend.isbn</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_product_tree_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='default_code']" position="after">
+                    <field name="isbn" optional="hide"/>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </odoo>
