--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -31,6 +31,14 @@
             </xpath>
             <xpath expr="//page[@name='purchase_delivery_invoice']" position="after">
                 <page name="po_details" string="PO Details">
+                    <field name="sale_order_ids" nolabel="1" readonly="1">
+                        <tree>
+                            <field name="name"/>
+                            <field name="date_order"/>
+                            <field name="state"/>
+                            <field name="gorgias_ticket"/>
+                        </tree>
+                    </field>
                     <group>
                         <group name="po_conf">
                             <field name="po_conf" style="max-height: 25px;"/>
@@ -55,6 +63,7 @@
                 <page name="ops_project_owner" string="Steps">
                     <group>
                         <group name="ops_project_owner" string="Ops Project Owner">
+                            <field name="ordered_by"/>
                             <field name="ops_project_owner_id"/>
                         </group>
                         <group name="approved_payment" string="Approved Payment">
@@ -75,6 +84,7 @@
                     </group>
                     <group name="date_delivary_requirements" string="Date And Delivary">
                         <group>
+                            <field name="num_of_need_by_days"/>
                             <field name="future_ship_nuances"/>
                             <field name="shipping_nuances"/>
                             <field name="processing_time_nuances"/>
@@ -107,7 +117,7 @@
                             <field name="memo" style="max-height: 25px;"/>
                         </group>
                         <group>
-                            <field name="gorgias_ticket" style="max-height: 25px;"/>
+                            <!--                            <field name="gorgias_ticket" style="max-height: 25px;"/>-->
                         </group>
                     </group>
                 </page>
@@ -132,7 +142,8 @@
         <field name="arch" type="xml">
             <form name="purchase_order_line" string="PO Line" create="false" edit="false">
                 <header>
-                    <field name="status" widget="statusbar" statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>
+                    <field name="status" widget="statusbar"
+                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
@@ -149,7 +160,7 @@
                             <field name="product_qty"/>
                             <field name="qty_received"/>
                             <field name="qty_invoiced"/>
-<!--                            <field name="product_uom"/>-->
+                            <!--                            <field name="product_uom"/>-->
                             <field name="price_unit"/>
                             <field name="discount"/>
                             <field name="taxes_id" widget="many2many_tags"/>
