--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -144,10 +144,11 @@
         <field name="model">purchase.order.line</field>
         <field name="arch" type="xml">
             <form name="purchase_order_line" string="PO Line" create="false" edit="false">
-<!--                <header>-->
-<!--                    <field name="status" widget="statusbar"-->
-<!--                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>-->
-<!--                </header>-->
+
+                <header>
+                    <field name="status" widget="statusbar"
+                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>
+                </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -161,8 +162,10 @@
                         <group>
                             <field name="product_id"/>
                             <field name="product_qty"/>
-<!--                            <field name="product_uom"/>-->
 
+                            <field name="qty_received"/>
+                            <field name="qty_invoiced"/>
+                            <!--                            <field name="product_uom"/>-->
                             <field name="price_unit"/>
                             <field name="discount"/>
                             <field name="taxes_id" widget="many2many_tags"/>
