--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -6,15 +6,15 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']//tree" position="inside">
+                <field name="status"/>
                 <button name="open_po_line" type="object" icon="fa-eye" class="btn btn-link" style="float:right"/>
             </xpath>
-            <xpath expr="//page[@name='products']/field[@name='order_line']" position="before">
-                <button name="update_shipping" string="Update Status" type="object" class="btn-primary"/>
-            </xpath>
+<!--            <xpath expr="//page[@name='products']/field[@name='order_line']" position="before">-->
+<!--                <button name="update_po_lines" string="Update PO Lines" type="object" class="btn-primary"/>-->
+<!--            </xpath>-->
 
-            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
-                <field name="status"/>
-            </xpath>
+<!--            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">-->
+<!--            </xpath>-->
             <xpath expr="//div[hasclass('oe_clear')]" position="before">
                 <group name="special_pick_note" col="6" class="mt-2 mt-md-0">
                     <group colspan="4">
@@ -132,6 +132,9 @@
                         </group>
                     </group>
                 </page>
+                <page name="shipment_tracking" string="Shipment Tracking">
+                    <field name="purchase_tracking_ids"/>
+                </page>
             </xpath>
         </field>
     </record>
@@ -151,16 +154,15 @@
                             <field name="order_id"/>
                         </h1>
                     </div>
-                    <group>
-                        <field name="name"/>
-                    </group>
+<!--                    <group>-->
+<!--                        <field name="name"/>-->
+<!--                    </group>-->
                     <group>
                         <group>
                             <field name="product_id"/>
                             <field name="product_qty"/>
-                            <field name="qty_received"/>
-                            <field name="qty_invoiced"/>
-                            <!--                            <field name="product_uom"/>-->
+<!--                            <field name="product_uom"/>-->
+
                             <field name="price_unit"/>
                             <field name="discount"/>
                             <field name="taxes_id" widget="many2many_tags"/>
@@ -169,6 +171,8 @@
                         <group>
                             <field name="date_planned"/>
                             <field name="disc_price_unit"/>
+                            <field name="qty_received"/>
+                            <field name="qty_invoiced"/>
                         </group>
                     </group>
                 </sheet>
